--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/AkcijaDodavanjeIzmene.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/AkcijaDodavanjeIzmene.xaml
@@ -5,19 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:POP_SF_53_2016_GUI.UI"
         mc:Ignorable="d"
-        Title="AkcijaDodavanjeIzmene" Height="350" Width="450" Background="#4169E1" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="AkcijaDodavanjeIzmene" Height="350" Width="480" Background="#4169E1" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Window.Resources>
+        <ControlTemplate x:Key="TextBoxError">
+            <DockPanel LastChildFill="True">
+                <TextBlock DockPanel.Dock="Right" Foreground="Red" FontSize="12pt">Polje ne sme biti prazno!</TextBlock>
+                <Border BorderBrush="Red" BorderThickness="1">
+                    <AdornedElementPlaceholder />
+                </Border>
+            </DockPanel>
+        </ControlTemplate>
+        <local:ValidationConverter x:Key="converter"/>
+    </Window.Resources>
     <Grid>
         <Label Content="Pocetak akcije:" HorizontalAlignment="Left" Margin="30,20,0,0" VerticalAlignment="Top" Width="100" />
         <Label Content="Kraj akcije:" HorizontalAlignment="Left" Margin="30,50,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.508,-0.169" Width="100"/>
         <Label Content="Popust:" HorizontalAlignment="Left" Margin="30,230,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox x:Name="tbPopust" Text="{Binding Path=Popust}" HorizontalAlignment="Left" Height="23" Margin="140,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="130" VerticalContentAlignment="Center"/>
-        <DatePicker x:Name="dpPocetak"   SelectedDate="{Binding Path=PocetakAkcije, StringFormat=dd/MM/yyyy}"  HorizontalAlignment="Left" Margin="140,20,0,0" VerticalAlignment="Top" Width="130"/>
-        <DatePicker  x:Name="dpKraj" SelectedDate="{Binding Path=KrajAkcije,StringFormat=dd/MM/yyyy}" HorizontalAlignment="Left" Margin="140,50,0,0" VerticalAlignment="Top" Width="130"/>
+        <TextBox x:Name="tbPopust" HorizontalAlignment="Left" Height="23" Margin="140,230,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="130" VerticalContentAlignment="Center">
+            <TextBox.Text>
+                <Binding Path="Popust" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <local:PopustValidation/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        <DatePicker x:Name="dpPocetak"   SelectedDate="{Binding Path=PocetakAkcije}" IsEnabled="False"  HorizontalAlignment="Left" Margin="140,20,0,0" VerticalAlignment="Top" Width="130"/>
+        <DatePicker  x:Name="dpKraj" SelectedDate="{Binding Path=KrajAkcije}" HorizontalAlignment="Left" Margin="140,50,0,0" VerticalAlignment="Top" Width="130"/>
         <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Margin="100,275,0,0" VerticalAlignment="Top" Width="85" Height="30" IsDefault="True" Click="Potvrdi" RenderTransformOrigin="0.351,1.391"/>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Margin="240,275,0,0" VerticalAlignment="Top" Width="85" Height="30" IsCancel="True" RenderTransformOrigin="0.082,1.067"/>
         <DataGrid x:Name="dgNamestajAkcija" CanUserAddRows="False" CanUserDeleteRows="False" ColumnWidth="*" HorizontalAlignment="Left" Height="140" Margin="30,83,0,0" VerticalAlignment="Top" Width="300" AutoGeneratingColumn="dgNamestajAkcija_AutoGeneratingColumn"/>
         <Button x:Name="btnDodaj" Content="Dodaj" HorizontalAlignment="Left" Height="33" Margin="345,100,0,0" VerticalAlignment="Top" Width="92" Click="btnDodaj_Click"/>
         <Button x:Name="btnUkloni" Content="Ukloni" HorizontalAlignment="Left" Height="33" Margin="345,150,0,0" VerticalAlignment="Top" Width="92" Click="btnUkloni_Click"/>
+        <TextBlock x:Name="tbIspisGreske" Margin="277,230,-197,0"  Foreground="Red" FontWeight="Bold" 
+                           Text="{Binding ElementName=tbPopust, Path=(Validation.Errors), Converter={StaticResource ResourceKey=converter}}"
+                           HorizontalAlignment="Left" Width="364" Height="23" VerticalAlignment="Top"/>
+
 
     </Grid>
 </Window>
