--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/PreuzmiUslugu.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/PreuzmiUslugu.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="PreuzmiUslugu" Height="355.2" Width="523" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#4169E1">
     <Grid>
-        <DataGrid x:Name="dgUsluga" CanUserAddRows="False" ColumnWidth="*" SelectionMode="Single" AutoGenerateColumns="True" HorizontalAlignment="Left" Height="196" Margin="27,54,0,0" VerticalAlignment="Top" Width="465" AutoGeneratingColumn="dgUsluga_AutoGeneratingColumn"/>
+        <DataGrid x:Name="dgUsluga" IsReadOnly="True" CanUserAddRows="False" ColumnWidth="*" SelectionMode="Single" AutoGenerateColumns="True" HorizontalAlignment="Left" Height="196" Margin="27,54,0,0" VerticalAlignment="Top" Width="465" AutoGeneratingColumn="dgUsluga_AutoGeneratingColumn"/>
         <Label Content="Izaberite uslugu:" HorizontalAlignment="Left" Height="39" Margin="38,10,0,0" VerticalAlignment="Top" Width="142" Foreground="White" FontSize="16"/>
         <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="32" Margin="123,282,0,0" VerticalAlignment="Top" Width="93" Click="btnPotvrdi_Click"/>
         <Button x:Name="btnOdustani" Content="Odustani" HorizontalAlignment="Left" Height="32" Margin="253,282,0,0" VerticalAlignment="Top" Width="92" IsCancel="True"/>
