--- a/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/ProdajaProzor.xaml
+++ b/POP-SF-53-2016-master/POP-SF-53-2016-GUI/POP-SF-53-2016-GUI/UI/ProdajaProzor.xaml
@@ -6,15 +6,34 @@
         xmlns:local="clr-namespace:POP_SF_53_2016_GUI.UI"
         mc:Ignorable="d"
         Title="ProdajaProzor" Height="618" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#4169E1">
+    <Window.Resources>
+        <ControlTemplate x:Key="TextBoxError">
+            <DockPanel LastChildFill="True">
+                <TextBlock DockPanel.Dock="Right" Foreground="Red" FontSize="12pt">Polje ne sme biti prazno!</TextBlock>
+                <Border BorderBrush="Red" BorderThickness="1">
+                    <AdornedElementPlaceholder />
+                </Border>
+            </DockPanel>
+        </ControlTemplate>
+        <local:ValidationConverter x:Key="converter"/>
+    </Window.Resources>
     <Grid>
         <Button x:Name="btnPotvrdi" Content="Potvrdi" HorizontalAlignment="Left" Height="40" Margin="211,537,0,0" VerticalAlignment="Top" Width="130" IsDefault="True" Click="Potvrdi"/>
         <Button x:Name="btnOtkazi" Content="Otkazi" HorizontalAlignment="Left" Height="40" Margin="381,537,0,0" VerticalAlignment="Top" Width="130" IsCancel="True"/>
         <DataGrid x:Name="dgStavke"  AutoGenerateColumns="True"  CanUserResizeColumns="False" CanUserAddRows="False" ColumnWidth="*" SelectionMode="Single"  HorizontalAlignment="Left" Height="167" Margin="10,185,0,0" VerticalAlignment="Top" Width="342" AutoGeneratingColumn="dgStavke_AutoGeneratingColumn"/>
         <Button x:Name="btnPreuzmi" Content="Dodaj" HorizontalAlignment="Left" Height="35" Margin="10,360,0,0" VerticalAlignment="Top" Width="112" Click="DodajStavku"/>
         <Label Content="Kupac:"  HorizontalAlignment="Left" Height="31" Margin="199,24,0,0" VerticalAlignment="Top" Width="100" FontSize="16" />
-        <TextBox x:Name="tbKupac" Text="{Binding Path=Kupac}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="29" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" Margin="302,24,0,0"/>
+        <TextBox x:Name="tbKupac" Validation.ErrorTemplate="{StaticResource ResourceKey=TextBoxError}" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="29" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" Margin="302,24,0,0">
+            <TextBox.Text>
+                <Binding Path="Kupac" UpdateSourceTrigger="PropertyChanged">
+                    <Binding.ValidationRules>
+                        <local:StringValidation/>
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
         <Label Content="Datum:" HorizontalAlignment="Left" Height="30" Margin="199,84,0,0" VerticalAlignment="Top" Width="100" FontSize="16" />
-        <DatePicker x:Name="dpDatum" SelectedDate="{Binding Path=DatumProdaje}" HorizontalAlignment="Left" Height="30" Margin="302,84,0,0" VerticalAlignment="Top" Width="154"/>
+        <DatePicker x:Name="dpDatum" SelectedDate="{Binding Path=DatumProdaje}" IsEnabled="False" HorizontalAlignment="Left" Height="30" Margin="302,84,0,0" VerticalAlignment="Top" Width="154"/>
         <Label Content="Stavke prodaje:" HorizontalAlignment="Left" Margin="185,152,0,0" VerticalAlignment="Top" Width="156" FontSize="20" Foreground="White" Height="44"/>
         <Button x:Name="btnUkloni" Content="Ukloni" HorizontalAlignment="Left" Height="35" Margin="127,360,0,0" VerticalAlignment="Top" Width="112" Click="UkloniStavku"/>
         <DataGrid x:Name="dgUsluge" CanUserAddRows="False" SelectionMode="Single" AutoGenerateColumns="True"  ColumnWidth="*"  HorizontalAlignment="Left" Height="167" Margin="408,185,0,0" VerticalAlignment="Top" Width="372" AutoGeneratingColumn="dgUsluge_AutoGeneratingColumn"/>
